# tensor_ext

./: CMakeLists.txt  THGenerateCudaTypes.h  init.lua  metrics.h  tensor.cpp  tensor.cu  tensor.h  tensor_ext-0-1.rockspec  test.lua
generic/: tensor.cpp
